# Taurcode

./: .gitignore  AGENTS.md  PROMPTS.md  README.md  STYLE.md  constraints-dev.txt  environment.yml  pyproject.toml
.github/workflows/: coverage.yml  lint.yml  smoke.yml  tests.yml
.jules/: bolt.md
docs/: README.md  prompting-best-practices.md
docs/explanations/: canonical-prompts-vs-espanso.md  semantic-vs-textual-fidelity.md
docs/how-to/: check-espanso-roundtrip-fidelity.md  debug-espanso-import-errors.md  import-an-espanso-package.md
docs/reference/: canonical-prompt-format.md  espanso-integration.md
docs/tutorials/: create-your-first-taurcode-package.md
espanso/package/: package.yml
project/context/: agents.md  humans.md
project/contributors/: contributors.md
project/design/: design.md
project/evidence/: EV-0001.md  EV-0002.md  EV-0003.md  EV-0004.md
project/executions/: 2026-04-29-AD_HOC-20260428-TAURCODE-CANONICAL-PROMPTS-DESIGN.md  2026-04-29-AD_HOC-20260429-TAURCODE-ESPANSO-IMPORTER.md  2026-05-12-frontmatter-shim-audit.md  (+37 more)
prompts/: codex_cloud_pr_prompt_2026-04-30.md  example.md
scripts/: coverage  develop  format  lint  publish  test  version
tests/: cli_defaults_test.py  espanso_export_test.py  espanso_import_test.py  espanso_install_test.py  espanso_lint_test.py  espanso_roundtrip_test.py  prompt_format_test.py  prompt_lint_test.py  prompt_loader_test.py  prompt_validation_test.py  roundtrip_cli_test.py  semantic_normalize_test.py  test_export_espanso.py  test_import_espanso.py  test_prompt_validation.py  text_normalization_test.py
(+97 files in other folders)
